FIXED: RadarChart labels not showing

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   text-align: center;
   font-family: 'Helvetica Neue', Arial, sans-serif;
   /* Closer to NBA.com's font choice */
-  background-color: #1d428a;
+  /* background-color: #1d428a; */
   /* Dark blue background, akin to NBA theme */
   color: #000000;
   /* White text for better contrast */
